--- a/css/styles.css
+++ b/css/styles.css
@@ -1,47 +1,24 @@
-/* Gradient Background */
+a {
+    text-decoration: none;
+}
 
-body {
-    background: #16222A; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #16222A , #3A6073); /* Chrome 10-25, Safari 5.1-6 
-    */
-    background: linear-gradient(to left, #16222A , #3A6073); /* W3C, IE 10+/ Edge, Firefox 16+,     
-    Chrome 26+, Opera 12+, Safari 7+ */
-
-    color: white;
+#wrap {
+    max-width: 940px;
+    margin: 0 auto;
+    padding: 0 5%;
 }
 
 
 
-/* Navigation Bar */
 
-ul {
-    list-style-type: none;
-    margin: 5px;
-    padding: 5px;
-    overflow: hidden;
+svg {
+    width: 15px;
+    height: 15px;
+    
 }
-
-li {
- float: right;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 50px;
-    text-decoration: none;   
-}
-
-li a:hover {
-    background-color: blueviolet;
-}
-
 
 /* Selfie on About Page */
 img {
     max-width: 40%;
     min-width: 20%;    
 }
-
-a:hover a:focus
