--- a/css/portfolio_styles.css
+++ b/css/portfolio_styles.css
@@ -1,22 +1,60 @@
 /* Included CSS
-  * Including TreeHouse Grid System 
-  * URL: 
-Inheriting Ben Schwarz's CSS Gallery */
+  * URL: http://tympanus.net/codrops/2011/12/26/css3-lightbox/ 
+*/
 
-/* Customize the dimensions of your gallery & thumbnails */
-/* Override Inherited Size from Grid System  */
+/* Customize. Make It Your Own. */
 
-.gallery {
-  height: 500px;
-}
-.item {
-  text-align: center;
+/* Thumbnails */
+.lb-album{
+  width: 50%;
+	margin: 0 auto;
 }
 
-.item img {
-  width: 400px;  
+.lb-album li {
+	float: left;
+	list-style: none;
+  margin: 10px;
+  position: relative;
 }
 
-.controls img {
-  width: 50px;
+.lb-album li > a,
+.lb-album li > a img {
+	display: block;
 }
+
+/* Overlay */
+.lb-overlay{
+	background: red;  
+	width: 0px;
+	height: 0px;
+	position: fixed;
+	overflow: hidden;
+	left: 0px;
+	top: 0px;
+	padding: 0px;
+	z-index: 999;
+	text-align: center;
+}
+
+.lb-overlay img{
+	max-height: 100%;
+	position: relative;
+}
+
+.lb-overlay:target {
+	width: auto;
+	height: auto;
+	bottom: 0px;
+	right: 0px;
+}
+
+/* Transitions or Animations */
+/* Customize This */
+.lb-overlay:target img {
+	animation: fadeIn .5s;
+}
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
