--- a/css/styles.css
+++ b/css/styles.css
@@ -160,30 +160,73 @@ svg {
 
 
 
-/* Selfie on About Page */
-img.selfie {
-    max-width: 30%;
-    min-width: 20%;
-    border-radius: 50%;
-    box-shadow: 0 0 6px rgba(0,0,0,.2)
-}
-
-
-
 /*************************
 Media Queries
 *************************/
 
 @media screen and (min-width: 480px) {
-    body {
-        background: teal;
+    
+    /**** Two Column Layout ****/
+    #primary {
+        width: 50%;
+        float: left;
+    }
+    
+    #secondary {
+        width: 40%;
+        float: right;
+    }
+
+     /**** Page: Portfolio ****/
+    #gallery li {
+        width: 28.3333%;
+    }
+    
+    #gallery li:nth-child (4n) {
+        clear: left;
+    }
+
+    /**** Page: Portfolio ****/
+    img.selfie {
+        float: left;
+        margin: 0 5% 80px 0;
     }
 }
 
 @media screen and (min-width: 660px) {
-    body {
-        background: green;
+    
+    /**** Header ****/
+    nav {
+        background: none;
+        float: right;
+        font-size: 1.125em;
+        margin-right: 5%;
+        text-align: right;
+        width: 45%;
     }
+    
+    #logo {
+        float: left;
+        margin-left: 5%;
+        text-align: left;
+        width: 45%;   
+    }
+    
+    
+    h1 {
+        font-size: 2.5em;
+    }
+    
+    h2{
+        font-size: 1.2em;
+        margin-bottom: 20px;
+    }
+    
+    header {
+        border-bottom: 5px solid #AC5333;
+        margin-bottom: 60px;
+    }
+    
 }
 
 
